<resources>
    <string name="app_name">TaskFour</string>
    <string name="good_morning">Good morning!</string>
    <string name="search_hint">search for celebrants...</string>
    <string name="not_count">1</string>
    <string name="yay">yaay!</string>
    <string name="upcoming_birthdays">Upcoming birthdays</string>
    <string name="viewpagerimage">viewPagerImage</string>
    <string name="home">Home</string>
    <string name="people">People</string>
    <string name="gifts">Gifts</string>
    <string name="search_icon">search Icon</string>
    <string name="heart_icon">heart icon</string>
    <string name="notification_icon">notification icon</string>
    <string name="add_icon">add icon</string>
    <string name="home_icon">home icon</string>
    <string name="people_icon">people icon</string>
    <string name="gift_icon">gift icon</string>
</resources>