<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".Controller.MainActivity"
    android:id="@+id/theMain">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="146.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/topText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/good_morning"
            android:textColor="@color/user_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="93dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/search_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:autofillHints="@string/search_hint"
            android:id="@+id/searchTxt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/search_hint"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/searchView"
            app:layout_constraintEnd_toStartOf="@+id/searchIcon"
            app:layout_constraintStart_toStartOf="@+id/searchView"
            app:layout_constraintTop_toTopOf="@+id/searchView" />

        <ImageView
            android:id="@+id/searchIcon"
            android:contentDescription="@string/search_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/searchView"
            app:layout_constraintTop_toTopOf="@+id/searchView"
            app:srcCompat="@drawable/ic_search" />

        <ImageView
            android:contentDescription="@string/heart_icon"
            android:id="@+id/heart_icon1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/heartContainer"
            app:layout_constraintStart_toStartOf="@+id/heartContainer"
            app:srcCompat="@drawable/ic_heart" />

        <ImageView
            android:contentDescription="@string/heart_icon"
            android:id="@+id/heart_icon2"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toStartOf="@+id/heartContainer"
            app:layout_constraintTop_toTopOf="@+id/heartContainer"
            app:srcCompat="@drawable/ic_heart" />

        <ImageView
            android:contentDescription="@string/heart_icon"
            android:id="@+id/heart_icon3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="1dp"
            app:layout_constraintEnd_toEndOf="@+id/heartContainer"
            app:layout_constraintTop_toTopOf="@+id/heartContainer"
            app:srcCompat="@drawable/ic_heart" />

        <View
            android:id="@+id/heartContainer"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toEndOf="@+id/topText"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/notificationCard"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            android:elevation="@null"
            app:cardBackgroundColor="@color/notification_card"
            app:cardCornerRadius="40dp"
            app:cardElevation="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/notificationConstraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:contentDescription="@string/notification_icon"
                    android:id="@+id/notificationIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_notification" />

                <TextView
                    android:id="@+id/notCount"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/notification"
                    android:text="@string/not_count"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
        app:layout_constraintTop_toBottomOf="@id/top_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollView_Constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/UpcomingBirthdayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/upcoming_birthdays"
                android:textColor="@color/user_text_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewPager2" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager2"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginTop="31dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.viewpager2.widget.ViewPager2>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UpcomingBirthdayText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/add_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/fixed_add"
        android:backgroundTint="@null"/>
    <ImageView
        android:contentDescription="@string/add_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="469dp"
        app:layout_constraintBottom_toBottomOf="@+id/add_button"
        app:layout_constraintTop_toTopOf="@+id/add_button"
        app:layout_constraintStart_toStartOf="@+id/add_button"
        app:layout_constraintEnd_toEndOf="@+id/add_button"
        android:background="@drawable/ic_add"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomBarConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8aacc8">

            <ImageButton
                android:contentDescription="@string/home_icon"
                android:id="@+id/homeBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="45dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_vectorhome"
                android:backgroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:contentDescription="@string/people_icon"
                android:id="@+id/peopleBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_vectorpeopleicon"
                android:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/giftBtn"
                app:layout_constraintStart_toEndOf="@+id/homeBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:contentDescription="@string/gift_icon"
                android:id="@+id/giftBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_vectorgifticon"
                android:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/homeTxt"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/homeBtn"
                app:layout_constraintStart_toStartOf="@+id/homeBtn"
                app:layout_constraintTop_toBottomOf="@+id/homeBtn" />

            <TextView
                android:id="@+id/peopleTxt"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:text="@string/people"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/peopleBtn"
                app:layout_constraintStart_toStartOf="@+id/peopleBtn"
                app:layout_constraintTop_toBottomOf="@+id/peopleBtn" />

            <TextView
                android:id="@+id/giftsTxt"
                android:layout_width="28dp"
                android:layout_height="17dp"
                android:text="@string/gifts"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/giftBtn"
                app:layout_constraintStart_toStartOf="@+id/giftBtn"
                app:layout_constraintTop_toBottomOf="@+id/giftBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>